tests/machine/x/fs/exists_builtin.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:46:39Z
open System

let data: int list = [1; 2]
let flag: bool = not (List.isEmpty [ for x in data do if x = 1 then yield x ])
printfn "%b" flag
